--- a/app/src/main/res/drawable/button_rectangle.xml
+++ b/app/src/main/res/drawable/button_rectangle.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFEB3B" />
+            <solid android:color="@color/yellow" />
             <corners
                 android:topRightRadius="20dp"
                 android:topLeftRadius="20dp"
