--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,33 +16,37 @@
             android:layout_height="180dp"
             android:src="@drawable/ic_directions_boat_black_24dp">
         </ImageView>
+
         <EditText
-            android:id="@+id/login_email"
+            android:id="@+id/login_username"
             android:layout_width="250dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
-            android:textColorHint="@color/colorPrimary"
+            android:background="@drawable/border"
+            android:paddingLeft="10dp"
             android:drawableLeft="@drawable/ic_person_black_24dp"
-            android:drawablePadding="8dp"
-            android:background="#11000000"
-            android:textColor="#ffffff"
-            android:hint="Email" />
+            android:drawablePadding="10dp"
+            android:hint="Username"
+            android:textColor="@color/blue"
+            android:textColorHint="@color/blue" />
+
         <EditText
             android:id="@+id/login_password"
             android:layout_width="250dp"
-            android:layout_height="34dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
-            android:hint="Password"
-            android:textColorHint="@color/colorPrimary"
-            android:drawablePadding="8dp"
+            android:background="@drawable/border"
+            android:paddingLeft="10dp"
             android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
-            android:background="#11000000"
-            android:textColor="@color/colorAccent"
-            android:inputType="textPassword" />
+            android:drawablePadding="10dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColor="@color/blue"
+            android:textColorHint="@color/blue" />
         <Button
             android:id="@+id/login_button"
             android:layout_width="250dp"
@@ -51,16 +55,26 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:textSize="18sp"
-            android:text="LogIn" />
+            android:text="Login" />
         <Button
             android:id="@+id/registration"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40sp"
+            android:background="@android:color/transparent"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp"
+            android:text="Register me" />
+        <Button
+            android:id="@+id/forgotpassword"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10sp"
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimary"
-            android:textSize="15sp"
-            android:text="Register me" />
+            android:textSize="12sp"
+            android:text="I forgot my password" />
     </LinearLayout>
 </RelativeLayout>
