--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/white">
 
     <ImageView
         android:id="@+id/logo_id"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerInParent="true"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:layout_marginTop="90dp"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/ic_directions_boat_black_24dp"/>
 
     <TextView
@@ -17,8 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:text="Smart Marina"
         android:textSize="30sp"
         android:textColor="@color/colorPrimary"/>
+
 
 </RelativeLayout>
