--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,12 @@
     <color name="colorPrimaryDark">#01445F</color>
     <color name="colorAccent">#C80616</color>
 
+    <color name="grey2">#EBEBEB</color>
+    <color name="yellow">#f3d174</color>
+    <color name="blue">#045077</color>
+    <color name="darkblue">#011b27</color>
+
+
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#B2B2B2</color>
