--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
 
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/grey2</item>
 
         <item name="colorControlNormal">@color/grey</item>
         <item name="colorControlActivated">@color/white</item>
