--- a/app/src/main/res/drawable/button_rectangle.xml
+++ b/app/src/main/res/drawable/button_rectangle.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/yellow" />
+            <solid android:color="@color/yellow"
+                />
             <corners
                 android:topRightRadius="20dp"
                 android:topLeftRadius="20dp"
