--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -41,6 +41,7 @@
         android:name="com.profico.smartmarina.ui.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" />
+
     <fragment
         android:id="@+id/homeScreenFragment"
         android:name="com.profico.smartmarina.ui.HomeScreenFragment"
@@ -49,6 +50,9 @@
         <action
             android:id="@+id/action_homeScreenFragment_to_shipsFragment"
             app:destination="@id/shipsFragment" />
+        <argument
+            android:name="shipName2"
+            app:argType="string"/>
         <action
             android:id="@+id/action_homeScreenFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
@@ -63,13 +67,17 @@
         tools:layout="@layout/fragment_ships" >
         <action
             android:id="@+id/action_shipsFragment_to_addShipFragment"
-            app:destination="@id/addShipFragment" />
+            app:destination="@id/addShipFragment"/>
         <argument
             android:name="shipName2"
             app:argType="string" />
         <action
             android:id="@+id/action_shipsFragment_to_homeScreenFragment"
-            app:destination="@id/homeScreenFragment" />
+            app:destination="@id/homeScreenFragment" >
+        <argument
+            android:name="shipName2"
+            app:argType="string" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/addShipFragment"
@@ -78,7 +86,10 @@
         tools:layout="@layout/fragment_add_ship" >
         <action
             android:id="@+id/action_addShipFragment_to_shipsFragment"
-            app:destination="@id/shipsFragment" />
+            app:destination="@id/shipsFragment"/>
+        <argument
+            android:name="shipName2"
+            app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
