--- a/app/src/main/res/layout/fragment_add_ship.xml
+++ b/app/src/main/res/layout/fragment_add_ship.xml
@@ -64,19 +64,13 @@
             android:textColor="@color/blue"
             android:text="Select ship size:"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginEnd="30dp"
-            android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />
-
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="50dp"
             android:padding="12dp"
             android:background="@color/blue" />
