--- a/app/src/main/res/drawable/profile_icon_foreground.xml
+++ b/app/src/main/res/drawable/profile_icon_foreground.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#000000">
+    android:width="180dp"
+    android:height="180dp"
+    android:viewportWidth="110"
+    android:viewportHeight="110"
+    android:tint="@color/blue">
   <group android:scaleX="1.2006"
       android:scaleY="1.2006"
       android:translateX="39.5928"
