--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
     <ImageView
         android:id="@+id/logo_id"
-        android:layout_width="190dp"
-        android:layout_height="190dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginTop="90dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_directions_boat_black_24dp"/>
+        android:src="@drawable/kvazilogo"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:minLines="2"
         android:text="Smart Marina"
         android:textSize="30sp"
         android:textColor="@color/colorPrimary"/>
