--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:src="@drawable/ic_directions_boat_black_24dp">
+            android:src="@drawable/kvazilogo">
         </ImageView>
 
         <EditText
