--- a/app/src/main/res/layout/fragment_ships.xml
+++ b/app/src/main/res/layout/fragment_ships.xml
@@ -21,10 +21,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_above="@+id/recyclerShips"
-        android:textColor="@color/black"
-        android:background="@color/yellow"
+        android:textColor="@color/white"
+        android:background="@color/blue"
         android:textSize="18sp"
         android:padding="15dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/san_francisco"
 
         android:text="Add New Ship"
         />
