--- a/app/src/main/res/layout/fragment_marina_info.xml
+++ b/app/src/main/res/layout/fragment_marina_info.xml
@@ -14,9 +14,9 @@
         android:text="Smart Marina"
         android:textAllCaps="true"
         android:textColor="@color/blue"
-        android:textSize="30sp"
+        android:textSize="33sp"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:fontFamily="@font/san_francisco"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,22 +28,22 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="135dp"
+        android:layout_marginTop="208dp"
         android:src="@drawable/ic_baseline_home_24"
         app:layout_constraintEnd_toStartOf="@+id/addressMarina"
+        app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/addressMarina"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="108dp"
+        android:fontFamily="@font/san_francisco"
         android:gravity="center_horizontal"
         android:text="Address: Spinčićeva ulica 2, 21000 Split"
-        android:fontFamily="@font/san_francisco"
         android:textColor="@color/blue"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,8 +53,8 @@
         android:id="@+id/appCompatImageView"
         android:layout_width="27dp"
         android:layout_height="27dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="72dp"
         android:src="@drawable/ic_baseline_local_phone_24"
         app:layout_constraintRight_toLeftOf="@id/phoneMarina"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,66 +62,83 @@
 
     <TextView
         android:id="@+id/phoneMarina"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="30dp"
-        android:text="Telephone number: +385 021 277 851"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/san_francisco"
         android:gravity="center_horizontal"
+        android:text="Telephone number:"
         android:textColor="@color/blue"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressMarina" />
 
+    <TextView
+        android:id="@+id/phoneNumMarina"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/san_francisco"
+        android:gravity="center_horizontal"
+        android:text="+385 021 277 851"
+        android:textColor="@color/blue"
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@+id/phoneMarina"
+        tools:layout_editor_absoluteX="64dp" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView3"
         android:layout_width="27dp"
         android:layout_height="27dp"
-        android:layout_marginTop="25dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="52dp"
         android:src="@drawable/ic_baseline_access_time_24"
         app:layout_constraintEnd_toStartOf="@+id/openMarina"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
     <TextView
         android:id="@+id/openMarina"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="30dp"
-        android:text="Open: 24/7"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/san_francisco"
+        android:text="Open: 24/7"
+        android:textAlignment="center"
         android:textColor="@color/blue"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneMarina" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumMarina" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView4"
         android:layout_width="27dp"
         android:layout_height="27dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="52dp"
         android:src="@drawable/ic_baseline_sports_tennis_24"
-        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toStartOf="@+id/activitiesMarina"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />
 
     <TextView
         android:id="@+id/activitiesMarina"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="50dp"
         android:fontFamily="@font/san_francisco"
         android:minLines="2"
         android:text="Extra activities: diving school, restaurant, bar, hotel."
+        android:textAlignment="center"
         android:textColor="@color/blue"
         android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/openMarina" />
 
