--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -14,9 +14,10 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/san_francisco"
         android:text="Payment"
+        android:textStyle="bold"
         android:textAllCaps="true"
         android:textColor="@color/blue"
-        android:textSize="30dp"
+        android:textSize="33dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
