--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
         android:text="My Profile"
+        android:textAllCaps="true"
         android:textColor="@color/blue"
         android:layout_marginTop="60dp"
         android:textSize="35dp"
